# aas_upgrader_tool

./: README.md  main.py  pyproject.toml
aas_upgrader/: upgrader.py  util.py
