[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aas_upgrader_tool"
version = "0.1.0"
dependencies = [
    "basyx-python-sdk==1.0.0",
    "basyx-python-sdk-2 @ git+https://github.com/zrgt/basyx-python-sdk@archive/v2.0.1",
]

requires-python = ">=3.10"
authors = [
  {name = "Igor Garmaev", email = "i.garmaev@iat.rwth-aachen.de"},
]
maintainers = [
  {name = "Igor Garmaev", email = "i.garmaev@iat.rwth-aachen.de"},
]
description = "Tool for upgrading existing AAS from v2.0.1 to V3.0.1"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["AAS", "Upgrader"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.packages]
find = {}


[project.urls]
Homepage = "https://github.com/rwth-iat/aas_upgrader_tool"
Repository = "https://github.com/rwth-iat/aas_upgrader_tool.git"
"Bug Tracker" = "https://github.com/rwth-iat/aas_upgrader_tool/issues"

[project.scripts]
aas_upgrader = "aas_upgrader:upgrader"
